--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="down_place">
                     <img src="part_img/down_mark.png" alt="" class="down">
                 </div>
-                <a id="lnk_1" pastr="e_to_t" href="https://www.nachulife-global02.com/2021w12at_t/" class="lang">
+                <a id="lnk_1" pastr="e_to_t" href="https://art790416.github.io/OZIO_W12t/" class="lang">
                     <img src="part_img/lang_ch.png" alt="">
                 </a>
             </div>
